; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_default_firstlong_forward_ext.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_default_firstlong_forward_ext.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64, i32* }

@CC = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @default_firstlong_forward_ext() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = call i32 (...) @tl_fetch_int()
  %4 = call i64 (...) @tl_fetch_long()
  store i64 %4, i64* %2, align 8
  %5 = load i64, i64* %2, align 8
  %6 = icmp slt i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i64, i64* %2, align 8
  %9 = sub nsw i64 0, %8
  store i64 %9, i64* %2, align 8
  br label %10

10:                                               ; preds = %7, %0
  %11 = load i64, i64* %2, align 8
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  store i64 0, i64* %2, align 8
  br label %14

14:                                               ; preds = %13, %10
  %15 = call i64 (...) @tl_fetch_error()
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %19

17:                                               ; preds = %14
  %18 = call i32 (...) @tl_fetch_mark_delete()
  store i32 -1, i32* %1, align 4
  br label %49

19:                                               ; preds = %14
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CC, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %31

24:                                               ; preds = %19
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CC, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = sext i32 %27 to i64
  %29 = load i64, i64* %2, align 8
  %30 = sdiv i64 %29, %28
  store i64 %30, i64* %2, align 8
  br label %31

31:                                               ; preds = %24, %19
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CC, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = call i32 @assert(i64 %34)
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CC, align 8
  %37 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = load i64, i64* %2, align 8
  %40 = srem i64 %39, %38
  store i64 %40, i64* %2, align 8
  %41 = call i32 (...) @tl_fetch_mark_restore()
  %42 = load %struct.TYPE_2__*, %struct.TYPE_2__** @CC, align 8
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 2
  %44 = load i32*, i32** %43, align 8
  %45 = load i64, i64* %2, align 8
  %46 = getelementptr inbounds i32, i32* %44, i64 %45
  %47 = load i32, i32* %46, align 4
  %48 = call i32 @query_forward(i32 %47)
  store i32 %48, i32* %1, align 4
  br label %49

49:                                               ; preds = %31, %17
  %50 = load i32, i32* %1, align 4
  ret i32 %50
}

declare dso_local i32 @tl_fetch_int(...) #1

declare dso_local i64 @tl_fetch_long(...) #1

declare dso_local i64 @tl_fetch_error(...) #1

declare dso_local i32 @tl_fetch_mark_delete(...) #1

declare dso_local i32 @assert(i64) #1

declare dso_local i32 @tl_fetch_mark_restore(...) #1

declare dso_local i32 @query_forward(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
